files/examples/error/lower_scoped_variable.t
def a():
    def b():
    int i
    end
    i:=5
end